repoze.configuration Changelog
==============================

0.1 (2009-06-22)
----------------

- Initial release.